@@ -108,7 +108,7 @@ object Templates {
     """
       |#!/bin/bash
       |
-      |export RCHAIN_RNODE="java -jar -Xmx4096m -Xms4096m  `pwd`/rnode.jar"
+      |export RCHAIN_RNODE="java -jar -Xmx4096m -Xms4096m -XX:+CMSClassUnloadingEnabled -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseParallelGC -XX:+UseConcMarkSweepGC  `pwd`/rnode.jar"
       |
       |pushd bootstrap
       |./start > output.log 2>&1 &
@@ -122,29 +122,13 @@ object Templates {
     """
       |#!/bin/bash
       |
-      |export RCHAIN_RNODE="java -jar -Xmx4096m -Xms4096m  `pwd`/rnode.jar"
+      |export RCHAIN_RNODE="java -jar -Xmx4096m -Xms4096m -XX:+CMSClassUnloadingEnabled -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseParallelGC -XX:+UseConcMarkSweepGC  `pwd`/rnode.jar"
       |
       |pushd 3001
       |./start > output.log 2>&1 &
       |pid1=$!
       |popd
       |
-      |pushd 3002
-      |./start > output.log 2>&1 &
-      |pid2=$!
-      |popd
-      |
-      |pushd 3003
-      |./start > output.log 2>&1 &
-      |pid3=$!
-      |popd
-      |
-      |pushd 3004
-      |./start > output.log 2>&1 &
-      |pid4=$!
-      |popd
-      |
-      |echo $pid1 $pid2 $pid3 $pid4 >> network.pids
     """.stripMargin
 
     val killNetwork =
